--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "saida-portfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://saidastf27.github.io/myportfolio",
+  "homepage": ".",
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
