--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "font-awesome": "^4.7.0",
-    "framer-motion": "^12.7.4",
+    "framer-motion": "^12.9.2",
     "openai": "^4.85.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
-    "react-parallax-tilt": "^1.7.291",
+    "react-parallax-tilt": "^1.7.293",
     "react-router-dom": "^7.4.0",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.3",
@@ -57,6 +57,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "gh-pages": "^6.3.0"
   }
 }
